--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "@metamask/providers": "^17.0.0",
+    "ethers": "^5.7.2",
+    "next": "14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
